# HW7-Regression

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
regression/: __init__.py  logreg.py
test/: test_logreg.py
